gccida/g1/offsettable_nonstrict_memref_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/offsettable_nonstrict_memref_p/src/recog.c:2382:36: error: use of undeclared identifier 'machine_mode'
return offsettable_address_p( 0, ( machine_mode)*( ( unsigned __int8 *)op + 2), op->fld[0].rtx) != 0; 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/offsettable_nonstrict_memref_p/src/obj/recog.o] Error 1
